Feat: delete tables
